--- a/_frontend/frontsize/_config/vars.scss
+++ b/_frontend/frontsize/_config/vars.scss
@@ -15,7 +15,7 @@ $color-carnation: rgb(244, 86, 86);
 $color-frost: rgb(234, 243, 220);
 $color-jordy-blue: rgb(139, 171, 234);
 $color-link-water: rgb(220, 230, 249);
-$color-lochmara: rgb(0, 146, 219);
+$color-lochmara: rgb(38,126,62);
 $color-mine-shaft: rgb(45, 45, 45);
 $color-white: rgb(255, 255, 255);
 $color-wild-sand: rgb(245, 245, 245);
