--- a/_frontend/frontsize/incontrodevops-2019/vars.scss
+++ b/_frontend/frontsize/incontrodevops-2019/vars.scss
@@ -1,4 +1,4 @@
-$color-lochmara: #267e3e;
+$color-lochmara: rgb(38,126,62);
 
 $color-background-action: $color-lochmara;
 $color-background-dark: $color-mine-shaft;
