Added and translated a bunch of contents

--- a/_includes/index/conf-infos.html
+++ b/_includes/index/conf-infos.html
@@ -15,15 +15,11 @@
         Why join?
       </h4>
       <p class="conf-infos__text">
-        Che tu sia alle prime armi o un esperto del campo, non perdere l'opportunità
-        di imparare qualcosa di nuovo dagli utilizzatori reali.
-      </p>
-      <p class="conf-infos__text">
-        Avrai la possibilità di interagire con gli esperti che stanno utilizzando
-        i container a servizio del business e della trasformazione digitale.
+        Whether you're a novice or an expert, grab the opportunity to learn something new
+        from people using those technologies and methodologies every day.
       </p>
       <h4 class="conf-infos__title">
-        Un giorno di workshop
+        A day of workshops
       </h4>
       <p class="conf-infos__text">
 
@@ -45,10 +41,10 @@
             </div>
 
       <div class="vimeo-phrase">
-        Dedicata<br>
-        a sviluppatori, sistemisti<br>
-        DevOps Engineer o IT Manager<br>
-        che vogliono far scalare la proprie architetture.
+        Dedicated to<br>
+        developers, sysadmins,<br>
+        DevOps Engineers and IT Managers<br>
+        interested in scaling their architectures.
       </div>
     </div>
   </div>
