--- a/_includes/index/follow-us.html
+++ b/_includes/index/follow-us.html
@@ -1,6 +1,6 @@
 <div class="follow-us">
   <div class="follow-us__title">
-    Puoi seguire <span class="follow-us__conf">{{ site.data.conference.name }}</span> su
+    Follow <span class="follow-us__conf">{{ site.data.conference.name }}</span> on
   </div>
   <div class="follow-us__socials">
     {% if site.data.social.facebook %}
