--- a/_includes/index/venue.html
+++ b/_includes/index/venue.html
@@ -10,7 +10,7 @@
   </p>
   {% if site.data.venue.map %}
   <a href="{{ site.data.venue.map }}" target="_blank" class="button button--left">
-    Come raggiungerci
+    How to reach us
   </a>
   {% endif %}
 </div>
