--- a/_includes/layout/footer.html
+++ b/_includes/layout/footer.html
@@ -36,7 +36,7 @@
                     Tickets sold out
                   </div>
                 {% else %}
-                  <a href="{{ site.data.tickets.url }}" class="button button--footer button--left">Registrati</a>
+                  <a href="{{ site.data.tickets.url }}" class="button button--footer button--left">Tickets</a>
                 {% endif %}
               </div>
               {% if site.data.speakers.call_for_paper %}
