--- a/_includes/sponsor/sponsorship.html
+++ b/_includes/sponsor/sponsorship.html
@@ -2,12 +2,12 @@
   <div class="limit">
     <div class="sponsorship__title">
       <div class="sponsorship__title-small">
-        Sponsorizzazione
+        Sponsorship
       </div>
-      Opzioni
+      Options
     </div>
     <div class="sponsorship__you-can">
-      È possibile sponsorizzare {{ site.data.conference.name }} in diversi modi
+      You can sponsor {{ site.data.conference.name }} in several ways:
     </div>
 </div>
 </div>
