--- a/_includes/workshop/program-preview.html
+++ b/_includes/workshop/program-preview.html
@@ -23,6 +23,6 @@
     </a>
   </div-->
   <div class="workshop__go">
-    <a href="/workshop/{{ workshop.slug }}.html" class="button button--register">Leggi di più</a>
+    <a href="/workshop/{{ workshop.slug }}.html" class="button button--register">Read more</a>
   </div>
 </a>
