--- a/_includes/workshop/program.html
+++ b/_includes/workshop/program.html
@@ -4,7 +4,7 @@
   </h1>
 
   <h1 class="row__title">
-    <a href="{{ workshop.ticket }}" target="_blank" class="button button--register">Registrati</a>
+    <a href="{{ workshop.ticket }}" target="_blank" class="button button--register">Register</a>
   </h1>
 
 </div>
@@ -13,7 +13,7 @@
 </h1>
 
 <h3 class="row__title">
-  {{ workshop.where }} - <a href="{{ workshop.map }}" class="link" target="_blank">come raggiungerci</a>
+  {{ workshop.where }} - <a href="{{ workshop.map }}" class="link" target="_blank">how to reach us</a>
 </h3>
 
 <h3 class="row__title">
@@ -57,7 +57,7 @@
 
 
   <div class="row__column">
-    <a href="{{ workshop.ticket }}" target="_blank" class="button button--register">Registrati</a>
+    <a href="{{ workshop.ticket }}" target="_blank" class="button button--register">Register</a>
   </div>
 </div>
 
@@ -75,7 +75,7 @@
   </div>
 
   <p class="row__column">
-    <a href="{{ workshop.ticket }}" target="_blank" class="button button--register">Registrati</a>
+    <a href="{{ workshop.ticket }}" target="_blank" class="button button--register">Register</a>
   </p>
 
 </div>
