--- a/_includes/workshop/wrapper.html
+++ b/_includes/workshop/wrapper.html
@@ -6,7 +6,7 @@
       <hr class="hr">
 
       <div class="intro intro--no-height">
-        <h1 class="column__title"><a href="{{ workshop.ticket }}" class="link">Iscriviti ora</a> i posti sono limitati</h1>
+        <h1 class="column__title"><a href="{{ workshop.ticket }}" class="link">Register now</a>, seats are limited</h1>
       </div>
 
     {% else %}
