--- a/_includes/index/conf-city.html
+++ b/_includes/index/conf-city.html
@@ -1,8 +1,8 @@
 <div class="conf-city-title">
   <div class="mega-info mega-info--big">
-    <div class="mega-info__text mega-info__text--lowercase">in una stupenda </div>
+    <div class="mega-info__text mega-info__text--lowercase">in a wonderful </div>
     <div class="mega-info__number">
-      &nbsp;Verona
+      &nbsp;Bologna
     </div>
   </div>
 </div>
