--- a/_includes/index/intro.html
+++ b/_includes/index/intro.html
@@ -16,7 +16,7 @@
   {% else %}
     <a href="{{ site.data.tickets.url }}" class="intro__register">
       <i class="intro__icon icon-play-1"></i>
-      Registrati
+      Register
     </a>
   {% endif %}
 
