--- a/_includes/index/newsletter.html
+++ b/_includes/index/newsletter.html
@@ -3,18 +3,18 @@
   <form id="newsletter" class="limit" action="//grusp.us5.list-manage.com/subscribe/post?u=29d918424cd5375f4c0c54c00&amp;id=204120a4eb" method="post" name="mc-embedded-subscribe-form" target="_blank">
 
     <h4 class="newsletter__title">Stay in the loop!</h4>
-    <p class="newsletter__text">Iscriviti alla nostra newsletter per rimanere sempre aggiornato</p>
+    <p class="newsletter__text">Subscribe to our newsletter to stay up to date</p>
 
     <input id="newsletter-email" type="email" value="" name="EMAIL" class="newsletter__email" placeholder="Newsletter subscribe">
 
     <div class="newsletter__language">
-      Vorresti ricevere le email in
+      Would you like to receive the newsletter in
       <label>
         <div class="newsletter__radio">
           <input type="radio" value="1" name="group[7981][1]" class="newsletter__input-radio">
           <i class="icon-circle-empty"></i>
           <i class="icon-circle"></i>
-          <span>Italiano</span>
+          <span>Italian</span>
         </div>
       </label>
       or
@@ -23,7 +23,7 @@
           <input type="radio" value="1" name="group[7981][1]" class="newsletter__input-radio" checked>
           <i class="icon-circle-empty"></i>
           <i class="icon-circle"></i>
-          <span>Inglese</span>
+          <span>English</span>
         </div>
         ?
       </label>
@@ -35,13 +35,13 @@
           <input id="privacy-policy" type="checkbox" value="4" name="group[8093][4]" class="newsletter__input-checkbox">
           <i class="icon-check-empty"></i>
           <i class="icon-check"></i>
-          <span>Ho letto ed accettato</span>
+          <span>I've read and I accept</span>
         </div>
-      </label> la <a href="https://www.iubenda.com/privacy-policy/{{ site.data.conference.iubenda.cookiePolicyId }}" target="_blank" class="newsletter__link">Privacy Policy</a>
+      </label> the <a href="https://www.iubenda.com/privacy-policy/{{ site.data.conference.iubenda.cookiePolicyId }}" target="_blank" class="newsletter__link">Privacy Policy</a>
     </div>
 
-    <span id="submit-disabled" class="button button--submit-disabled button--left newsletter__fake-submit">Invia</span>
-    <span id="accept-privacy" class="newsletter__text newsletter__text--tip">Accetta la privacy policy per continuare</span>
+    <span id="submit-disabled" class="button button--submit-disabled button--left newsletter__fake-submit">Submit</span>
+    <span id="accept-privacy" class="newsletter__text newsletter__text--tip">Please accept the privacy policy to proceed</span>
     <input id="submit-enabled" type="submit" value="Submit" name="subscribe" class="button button--submit button--left button--hidden">
 
   </form>
