--- a/_includes/index/sponsors.html
+++ b/_includes/index/sponsors.html
@@ -128,13 +128,13 @@
   {% if site.data.sponsors.call_for_sponsor %}
     <div class="limit">
       <div class="sponsors__became">
-        Diventa Sponsor!
+        Become a Sponsor!
       </div>
-        ed aiutaci a far crescere la conferenza<br>
+        And help up make the conference great<br>
         {% if site.data.sponsors.pdf %}
-            <a href="{{ site.baseurl }}/img/sponsors/{{ site.data.sponsors.pdf }}" target="_blank" class="button button--left">Download PDF</a>
+          <a href="{{ site.baseurl }}/img/sponsors/{{ site.data.sponsors.pdf }}" target="_blank" class="button button--left">Download PDF</a>
         {% else if %}
-            <a href="mailto:info@grusp.org?subject=vorrei sponsorizzare {{ site.data.conference.name }}" target="_blank" class="button button--left">Inviaci una email</a>
+          <a href="mailto:info@grusp.org?subject=I'm interested in supporting {{ site.data.conference.name }}" target="_blank" class="button button--left">Send us an email</a>
         {% endif %}
     </div>
   {% endif %}
