--- a/_includes/layout/header.html
+++ b/_includes/layout/header.html
@@ -53,7 +53,7 @@
             </div>
           {% else %}
             <a href="{{ site.data.tickets.url }}" class="button button--register">
-              Registrati
+              Tickets
             </a>
           {% endif %}
 
