--- a/_includes/layout/menu.html
+++ b/_includes/layout/menu.html
@@ -19,8 +19,8 @@
         </div>
       {% else %}
         <a href="{{ site.data.tickets.url }}" target="_blank" class="menu__register">
-          Registrati<br>
-          adesso
+          Register<br>
+          now
         </a>
       {% endif %}
     </div>
@@ -36,7 +36,7 @@
         {% if site.data.conference.schedule_available %}
         <li class="menu__item">
           <a href="{{ site.baseurl }}/schedule.html" class="menu__button">
-            Programma
+            Schedule
           </a>
         </li>
         {% endif %}
@@ -52,11 +52,11 @@
         <li class="menu__item">
           {% if site.data.tickets.sold_out %}
             <span class="menu__button menu__button--sold-out">
-              Biglietti
+              Tickets
             </span>
           {% else %}
             <a href="{{ site.data.tickets.url }}" class="menu__button">
-              Biglietti
+                Tickets
             </a>
           {% endif %}
         </li>
