--- a/_includes/sponsor/intro.html
+++ b/_includes/sponsor/intro.html
@@ -2,23 +2,23 @@
   <h1 class="sponsor-intro__title">Sponsor</h1>
   <div class="limit">
     <h3 class="sponsor-intro__question">
-      La tua attività è connessa<br>
-      con il mondo DevOps, Cloud e il suo ecosistema?
+      Is your activity connected<br>
+      with the DevOps and Cloud world, and its ecosystem?
       <span class="sponsor-intro__question-red">
-        Vuoi dare il tuo contributo per<br>
-        il successo del {{ site.data.conference.name }}?
+        Do you want to participate in<br>
+        the making of {{ site.data.conference.name }}?
       </span>
     </h3>
 
     <div class="sponsor-intro__row">
       <div class="sponsor-intro__row-column">
         <p class="sponsor-intro__text">
-          Ottima idea! Contribuendo alla conferenza otterrai visibilità esattamente presso le persone che vorresti contattare: sviluppatori e sistemisti esperti di tecnologie container!
+          Great idea! You will contribute to the success of an event that is unique in Italy and will receive a remarkable visibility.
         </p>
       </div>
       <div class="sponsor-intro__row-column">
         <p class="sponsor-intro__text">
-          Cerchi collaboratori? Vuoi promuovere una tecnologia o un servizio? Stai organizzando un corso e ti servono docenti? O vuoi farlo conoscere a potenziali studenti?
+          Are you hiring employees or searching partners? Are you looking for a way to promote a technology or a service? Are you organizing a course and need teachers, or some visibility?
         </p>
       </div>
     </div>
