rigenerazione css e assets

--- a/_includes/index/speakers.html
+++ b/_includes/index/speakers.html
@@ -1,7 +1,6 @@
 <div class="speakers-title">
   <div class="mega-info mega-info--huge">
-    <div class="mega-info__number">8+</div>
-    <div class="mega-info__text"> speakers</div>
+    <div class="mega-info__text">Our speakers</div>
   </div>
 </div>
 
